--- a/src/schooltool/gradebook/locales/cs.po
+++ b/src/schooltool/gradebook/locales/cs.po
@@ -164,17 +164,17 @@ msgstr ""
 #. Default: "Remove"
 #: /src/schooltool/gradebook/browser/categories.pt:33
 msgid "remove-button"
-msgstr "tlačítko-odstranit"
+msgstr "Odstranit"
 
 #. Default: "Add"
 #: /src/schooltool/gradebook/browser/categories.pt:42
 msgid "add-button"
-msgstr "přidat"
+msgstr "Přidat"
 
 #. Default: "Change"
 #: /src/schooltool/gradebook/browser/categories.pt:51
 msgid "change-button"
-msgstr ""
+msgstr "Změnit"
 
 #: /src/schooltool/gradebook/browser/category.py:43
 msgid "Categories"
