--- a/src/schooltool/gradebook/locales/en_GB.po
+++ b/src/schooltool/gradebook/locales/en_GB.po
@@ -163,17 +163,17 @@ msgstr ""
 #. Default: "Remove"
 #: /src/schooltool/gradebook/browser/categories.pt:33
 msgid "remove-button"
-msgstr ""
+msgstr "Remove"
 
 #. Default: "Add"
 #: /src/schooltool/gradebook/browser/categories.pt:42
 msgid "add-button"
-msgstr ""
+msgstr "Add"
 
 #. Default: "Change"
 #: /src/schooltool/gradebook/browser/categories.pt:51
 msgid "change-button"
-msgstr "change-button"
+msgstr "Change"
 
 #: /src/schooltool/gradebook/browser/category.py:43
 msgid "Categories"
