--- a/src/schooltool/gradebook/locales/fr.po
+++ b/src/schooltool/gradebook/locales/fr.po
@@ -169,7 +169,7 @@ msgstr ""
 #. Default: "Add"
 #: /src/schooltool/gradebook/browser/categories.pt:42
 msgid "add-button"
-msgstr "bouton \"ajouter\""
+msgstr "Ajouter"
 
 #. Default: "Change"
 #: /src/schooltool/gradebook/browser/categories.pt:51
