--- a/src/schooltool/gradebook/locales/hu.po
+++ b/src/schooltool/gradebook/locales/hu.po
@@ -163,12 +163,12 @@ msgstr ""
 #. Default: "Remove"
 #: /src/schooltool/gradebook/browser/categories.pt:33
 msgid "remove-button"
-msgstr "eltávolítás-gomb"
+msgstr "Eltávolítás"
 
 #. Default: "Add"
 #: /src/schooltool/gradebook/browser/categories.pt:42
 msgid "add-button"
-msgstr "hozzáadás-gomb"
+msgstr "Hozzáadás"
 
 #. Default: "Change"
 #: /src/schooltool/gradebook/browser/categories.pt:51
