--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,7 @@ CHANGES
 ------------------
 
 Stable release to go with SchoolTool 1.4.0.
+- Fixed failing ranged score system for report activities when using non-english views (https://launchpad.net/bugs/581825)
 
 
 0.6.2 (2010-04-28)
