--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,7 +7,7 @@ CHANGES
 
 Stable release to go with SchoolTool 1.4.0.
 - Fixed failing ranged score system for report activities when using non-english views (https://launchpad.net/bugs/581825)
-- Made the gradebook to stop creating a default worksheet if there are report sheets deployed
+- Made the gradebook to stop creating a default worksheet if there are report sheets deployed (https://launchpad.net/bugs/579720)
 - Made 'Apply' button translatable in edit form of report activities
 - Improved due filter message id in the gradebook overview
 - Fixed typo (https://launchpad.net/bugs/582436)
